Fix bug: tip speech bubble appear on sidebar on mobile

--- a/styles/SpeechBubble.module.scss
+++ b/styles/SpeechBubble.module.scss
@@ -16,7 +16,6 @@
     }
 
     &.active {
-        display: inline-block;
         position: relative;
         top: 0.5rem;
         left: 1rem;
